# Spriter2dX

./: CMakeLists.txt  README.md
SpriterPlusPlus/spriterengine/entity/: entityinstance.cpp
SpriterPlusPlus/spriterengine/objectinfo/: universalobjectinterface.cpp  universalobjectinterface.h
include/spriter2dx/: AnimationNode.cpp  AnimationNode.h  ccboneinstanceinfo.cpp  ccboxinstanceinfo.cpp  ccboxinstanceinfo.h  ccfilefactory.cpp  ccfilefactory.h  ccimagefile.cpp  ccimagefile.h  ccpointinstanceinfo.cpp  ccpointinstanceinfo.h  ccsoundfile.cpp  ccsoundfile.h  ccsoundobjectinforeference.cpp  cctriggerobjectinfo.cpp  cctriggerobjectinfo.h  tinyxmlspriterfileattributewrapper.h  tinyxmlspriterfiledocumentwrapper.cpp  tinyxmlspriterfiledocumentwrapper.h  tinyxmlspriterfileelementwrapper.cpp
src/: AnimationNode.cpp  AnimationNode.h  ccboneinstanceinfo.cpp  ccboneinstanceinfo.h  ccfilefactory.cpp  ccfilefactory.h  ccimagefile.cpp  ccimagefile.h  ccobjectfactory.cpp  ccobjectfactory.h  ccpointinstanceinfo.cpp  ccpointinstanceinfo.h  ccsoundfile.cpp  ccsoundobjectinforeference.cpp  ccsoundobjectinforeference.h  tinyxmlspriterfileattributewrapper.h  tinyxmlspriterfiledocumentwrapper.cpp  tinyxmlspriterfiledocumentwrapper.h  tinyxmlspriterfileelementwrapper.h
